# Open-WebUI-Admin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yaml  security.yaml  tests.yaml
docs/: configuration.md  development.md  index.md  installation.md
docs/commands/: audio.md  banners.md  config.md  connections.md  files.md  images.md  knowledge.md  models.md  users.md
open_webui_admin/: audio.py  banners.py  cli.py  client.py  config.py  connections.py  files.py  images.py  knowledge.py  models.py  users.py
tests/: test_audio.py  test_banners.py  test_cli.py  test_config.py  test_connections.py  test_files.py  test_images.py  test_knowledge.py  test_models.py  test_users.py
