[tool.poetry]
name = "open-webui-admin"
version = "0.1.0"
description = "Open WebUI admin CLI tool"
authors = ["Mikke Schirén"]
classifiers = ["License :: OSI Approved :: MIT License"]
packages = [{include = "open_webui_admin"}]
readme = "LICENSE"
license = "MIT"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
open-webui-admin = "open_webui_admin.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
click = "^8.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-mock = "^3.15.1"
pytest-cov = "^7.1.0"